# ebnn-host

./: .gitignore  CMakeLists.txt  pixi.toml
examples/: example_glfw_opengl3.cpp  example_whiteboard.cpp
include/ebnn_host/: duck_comm.h  whiteboard.h  whiteboard_app.h
src/: duck_comm.cpp  whiteboard.cpp  whiteboard_app.cpp
src/ebnn_host/: canvas.cppm  ebnn_host.cppm  inference.cppm  ui.cppm
